<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_fav"
            android:icon="@drawable/comment"
            android:title="@string/site_menu_fav" />

        <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/history" />

        <item
            android:id="@+id/fund"
            android:icon="@drawable/paypal"
            android:title="@string/fund" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/gear"
            android:title="@string/settings" />


    </group>

    <item android:title="@string/social">
        <menu>

            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/gmail"
                android:title="@string/facebook" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/about_app"
                android:icon="@drawable/question"
                android:title="@string/about" />

            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/policy"
                android:title="@string/privacy" />

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/share"
                android:title="@string/share" />

            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/star"
                android:title="@string/rate" />

            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/logout"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
