<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_15dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@mipmap/ic_launcher_round"
                android:contentDescription="@string/about_dev" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tagline"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tagline"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:layout_marginTop="@dimen/margin_15dp"
                android:gravity="center"
                android:text="@string/developer_message"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="كما يمكنك التواصل معنا عن طريق الايميل"/>

            <ImageView
                android:id="@+id/mail"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/gmail"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
